[gd_scene load_steps=17 format=3 uid="uid://c2temcei51jwy"]

[ext_resource type="Script" path="res://Assets/Player Character/Player.gd" id="1_bbvfw"]
[ext_resource type="PackedScene" uid="uid://bxei516mvsvwr" path="res://UI/Pause/pause_menu.tscn" id="2_wcfdf"]
[ext_resource type="Texture2D" uid="uid://5srt81hgxg6n" path="res://Textures/Testing/Player_Character_Test.png" id="3_xlwcc"]
[ext_resource type="Texture2D" uid="uid://catfkupeeauru" path="res://Textures/UI/Car Handling/Drive Icon.png" id="4_5wbr7"]
[ext_resource type="Texture2D" uid="uid://c4s1liwndi1kv" path="res://Textures/Testing/Player_Character_NM.png" id="4_ydnn7"]
[ext_resource type="Texture2D" uid="uid://dce5npxfvtd4e" path="res://Textures/UI/Car Handling/Edit Icon.png" id="5_50f3s"]
[ext_resource type="Texture2D" uid="uid://dwao6lrmjmnts" path="res://Textures/UI/Car Handling/Move Icon.png" id="6_cxgng"]
[ext_resource type="Texture2D" uid="uid://bo6v0dexo3kvb" path="res://Textures/UI/Car Handling/Info Icon.png" id="7_dth36"]
[ext_resource type="Texture2D" uid="uid://c4m3aknxd0f4u" path="res://Textures/UI/Car Handling/Dyno Icon.png" id="7_xbq35"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vyxlc"]
radius = 11.0375
height = 28.4438

[sub_resource type="Animation" id="Animation_425nq"]
resource_name = "Idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_nr3ks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vti04"]
resource_name = "Walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 3, 4, 5, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7x6q"]
_data = {
"Idle": SubResource("Animation_425nq"),
"RESET": SubResource("Animation_nr3ks"),
"Walk": SubResource("Animation_vti04")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_7eaoa"]
diffuse_texture = ExtResource("3_xlwcc")
normal_texture = ExtResource("4_ydnn7")
specular_shininess = 0.12

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xicv1"]
radius = 17.8532
height = 36.4481

[node name="Player" type="Node2D"]

[node name="Character" type="CharacterBody2D" parent="."]
script = ExtResource("1_bbvfw")
movement_speed = 170

[node name="Pause_Menu" parent="Character" instance=ExtResource("2_wcfdf")]
visible = false
z_index = 1000
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.446, 0.446)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vyxlc")

[node name="Camera2D" type="Camera2D" parent="Character"]
zoom = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character"]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_q7x6q")
}

[node name="AnimatedSprite2D" type="Sprite2D" parent="Character"]
z_index = 1
texture = SubResource("CanvasTexture_7eaoa")
vframes = 6

[node name="Selector" type="Area2D" parent="Character/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/AnimatedSprite2D/Selector"]
position = Vector2(-0.0208673, -5.31964)
shape = SubResource("CapsuleShape2D_xicv1")

[node name="Interact_Menu_Garage" type="HBoxContainer" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0258712
offset_top = 0.0453225
offset_right = 580.026
offset_bottom = 66.0453
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Drive_Car_button" type="Button" parent="Interact_Menu_Garage"]
visible = false
layout_mode = 2
theme_override_constants/icon_max_width = 55
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("4_5wbr7")
icon_alignment = 1
expand_icon = true

[node name="Edit_Car_button" type="Button" parent="Interact_Menu_Garage"]
visible = false
layout_mode = 2
theme_override_constants/icon_max_width = 55
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("5_50f3s")
icon_alignment = 1
expand_icon = true

[node name="Dyno_button" type="Button" parent="Interact_Menu_Garage"]
visible = false
layout_mode = 2
theme_override_constants/icon_max_width = 55
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("7_xbq35")
icon_alignment = 1
expand_icon = true

[node name="Move_Car_button" type="Button" parent="Interact_Menu_Garage"]
visible = false
layout_mode = 2
theme_override_constants/icon_max_width = 55
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("6_cxgng")
icon_alignment = 1
expand_icon = true

[node name="Info_Car_button" type="Button" parent="Interact_Menu_Garage"]
visible = false
layout_mode = 2
theme_override_constants/icon_max_width = 55
theme_override_font_sizes/font_size = 56
text = "    "
icon = ExtResource("7_dth36")
icon_alignment = 1
expand_icon = true

[node name="Move_Menu_Garage" type="HBoxContainer" parent="."]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.3, 0.3)
theme_override_constants/separation = 19

[node name="VBoxContainer" type="VBoxContainer" parent="Move_Menu_Garage"]
layout_mode = 2

[node name="Move_To_Lift" type="Button" parent="Move_Menu_Garage/VBoxContainer"]
layout_mode = 2
text = "Move to Lift"

[node name="Move_To_Dyno" type="Button" parent="Move_Menu_Garage/VBoxContainer"]
layout_mode = 2
text = "Move to Dyno"

[node name="Move_To_Paint" type="Button" parent="Move_Menu_Garage/VBoxContainer"]
layout_mode = 2
text = "Move to Paint Booth"

[node name="VBoxContainer2" type="VBoxContainer" parent="Move_Menu_Garage"]
layout_mode = 2

[node name="Move_To_Garage_Parking_1" type="Button" parent="Move_Menu_Garage/VBoxContainer2"]
layout_mode = 2
text = "Move to Parking 1"

[node name="Move_To_Garage_Parking_2" type="Button" parent="Move_Menu_Garage/VBoxContainer2"]
layout_mode = 2
text = "Move to Parking 2"

[node name="Move_To_Garage_Parking_3" type="Button" parent="Move_Menu_Garage/VBoxContainer2"]
layout_mode = 2
text = "Move to Parking 3"

[connection signal="body_entered" from="Character/AnimatedSprite2D/Selector" to="Character" method="_on_selector_body_entered"]
[connection signal="body_exited" from="Character/AnimatedSprite2D/Selector" to="Character" method="_on_selector_body_exited"]
[connection signal="pressed" from="Interact_Menu_Garage/Drive_Car_button" to="Character" method="_on_drive_car_button_pressed"]
[connection signal="pressed" from="Interact_Menu_Garage/Edit_Car_button" to="Character" method="_on_edit_car_button_pressed"]
[connection signal="pressed" from="Interact_Menu_Garage/Dyno_button" to="Character" method="_on_dyno_button_pressed"]
[connection signal="pressed" from="Interact_Menu_Garage/Move_Car_button" to="Character" method="_on_move_car_button_pressed"]
[connection signal="pressed" from="Interact_Menu_Garage/Info_Car_button" to="Character" method="_on_sell_car_button_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer/Move_To_Lift" to="Character" method="_on_move_to_lift_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer/Move_To_Dyno" to="Character" method="_on_move_to_dyno_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer/Move_To_Paint" to="Character" method="_on_move_to_paint_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer2/Move_To_Garage_Parking_1" to="Character" method="_on_move_to_garage_parking_1_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer2/Move_To_Garage_Parking_2" to="Character" method="_on_move_to_garage_parking_2_pressed"]
[connection signal="pressed" from="Move_Menu_Garage/VBoxContainer2/Move_To_Garage_Parking_3" to="Character" method="_on_move_to_garage_parking_3_pressed"]
